--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>IgDataStores</artifactId>
     <version>1.1-SNAPSHOT</version>
+
+    <developers>
+        <developer>
+            <name>IgWebDE</name>
+            <email>info@interguessweb.de</email>
+            <organization>IgWebDE</organization>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
