--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: ${{ matrix.java-version }}
+        distribution: 'adopt'
+        architecture: 'x64'
 
     - name: Cache Maven packages
       uses: actions/cache@v2
