--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         language: [java]
         java-version: [17]
@@ -26,7 +27,7 @@ jobs:
         architecture: 'x64'
 
     - name: Cache Maven packages
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
