--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
     <artifactId>IgDataStores</artifactId>
     <version>1.1-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <developers>
         <developer>
             <name>IgWebDE</name>
